The profile screen has been completed and the contact fragment has been started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Menssage Base</string>
+    <string name="add_photo_image">Add photo image</string>
 </resources>
